[package]
name = "baryon"
version = "0.2.0"
edition = "2018"
resolver = "2"
license = "MIT"
description = "Fast prototyping 3D engine"
repository = "https://github.com/kvark/baryon"

[workspace]
members = ["baryon-core"]

[features]

[dependencies.bc]
package = "baryon-core"
path = "baryon-core"
#version = "0.1"

[dependencies]
# public
mint = "0.5"
# private
bytemuck = { version = "1.4", features = ["derive"] }
glam = "0.18"
fxhash = "0.2"
log = "0.4"
raw-window-handle = "0.3"
winit = "0.25"
wgpu = "0.10"

[dev-dependencies]
env_logger = "0.8"
naga = { version = "0.6", features = ["wgsl-in"] }
pollster = "0.2"
