[package]
name = "baryon"
version = "0.3.0"
edition = "2018"
resolver = "2"
license = "MIT"
description = "Fast prototyping 3D engine"
repository = "https://github.com/kvark/baryon"

[workspace]
members = ["baryon-core"]

[features]
default = ["window", "obj"] #TEMP
window = ["raw-window-handle", "winit"]
# pass = glam, fxhash, mint, wgpu
# factory =

[[example]]
name = "load-obj"
required-features = ["obj"]

[dependencies.bc]
package = "baryon-core"
path = "baryon-core"
version = "0.1"

[dependencies]
# public
mint = "0.5"
# private
bitflags = "1.0"
bytemuck = { version = "1.4", features = ["derive"] }
glam = "0.18"
fxhash = "0.2"
log = "0.4"
obj = { version = "0.10", optional = true }
raw-window-handle = { version = "0.3", optional = true }
winit = { version = "0.25", optional = true }
wgpu = "0.10"

[dev-dependencies]
naga = { version = "0.6", features = ["wgsl-in"] }
pollster = "0.2"
