[package]
name = "baryon-core"
version = "0.1.0"
edition = "2018"
resolver = "2"
license = "MIT"
description = "Core API of Baryon 3D-engine"
repository = "https://github.com/kvark/baryon"

[features]
default = []

[dependencies]
bytemuck = "1.4"
glam = { version = "0.18", features = ["mint"] }
hecs = "0.5"
log = "0.4"
mint = "0.5"
raw-window-handle = "0.3"
wgpu = "0.10"
