[package]
name = "baryon-core"
version = "0.1.0"
edition = "2018"
resolver = "2"
license = "MIT"
description = "Core API of Baryon 3D-engine"
repository = "https://github.com/kvark/baryon"

[features]
default = []

[dependencies]
# public
bytemuck = "1.4"
hecs = "=0.7.1"
mint = "0.5"
raw-window-handle = "0.4"
wgpu = "0.12"
# private
ddsfile = "0.5"
glam = { version = "0.20", features = ["mint"] }
image = { version = "0.23", default-features = false, features = ["jpeg", "png", "bmp", "hdr", "dds"] }
log = "0.4"
